BUILD - update gradle and add retro-compatibility